<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.programmingpenguin.icecreamfinalrobledo.MainActivity">

    <TextView
        android:text="@string/ice_cream_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:inputType="textPersonName"
        android:hint ="@string/hint"
        android:ems="10"
        android:id="@+id/editText"
        app:layout_constraintRight_toLeftOf="@+id/switch1"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="21dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="36dp" />

    <Switch
        android:text="@string/dairy_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/toggleButton"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText"
        tools:layout_constraintBaseline_creator="1" />

    <Spinner
        android:entries="@array/type_icecream"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:id="@+id/spinner"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        android:layout_marginStart="33dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="33dp" />

    <ToggleButton
        android:textOn="@string/toggle_on"
        android:textOff="@string/toggle_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggleButton"
        android:layout_marginStart="20dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/spinner"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/spinner"
        android:layout_marginLeft="20dp" />

    <CheckBox
        android:text="@string/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox"
        android:layout_marginStart="33dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkBox2"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="33dp" />

    <CheckBox
        android:text="@string/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox2"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintRight_toRightOf="@+id/button"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toLeftOf="@+id/button" />

    <CheckBox
        android:text="@string/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox3"
        android:layout_marginStart="32dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkBox2"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/checkBox2"
        android:layout_marginLeft="32dp" />

    <Button
        android:text="@string/button"
        android:onClick="treatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="26dp"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        android:layout_marginTop="138dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="137dp"
        app:layout_constraintLeft_toRightOf="@+id/checkBox"
        android:layout_marginLeft="26dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/display"
        app:layout_constraintVertical_bias="0.47"
        android:layout_marginEnd="24dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="74dp"
        android:id="@+id/imageView"
        android:scaleType="fitCenter"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/button2"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toBottomOf="@+id/display" />

    <Button
        android:text="@string/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.25" />

    <RadioGroup
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="33dp"
        android:layout_marginTop="190dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="33dp"
        android:id="@+id/radioGroup">

        <RadioButton
            android:text="@string/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="244dp"
            tools:layout_editor_absoluteX="21dp"
            android:id="@+id/radioButton"
            android:layout_weight="0.23" />

        <RadioButton
            android:text="@string/radioGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="244dp"
            tools:layout_editor_absoluteX="141dp"
            android:id="@+id/radioButton3"
            android:layout_weight="0.17" />

        <RadioButton
            android:text="@string/radioGroup3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="242dp"
            tools:layout_editor_absoluteX="270dp"
            android:id="@+id/radioButton4"
            android:layout_weight="0.23" />

    </RadioGroup>


</android.support.constraint.ConstraintLayout>
